<resources>
    <string name="app_name">EEnergia-CTPI 1.0</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="inicio">Inicio</string>
    <string name="tarjeta1">Tarjeta 1</string>
    <string name="tarjeta2">Tarjeta 2</string>
    <string name="tarjeta3">Tarjeta 3</string>
    <string name="contactanos">Contáctanos</string>
    <string name="ayuda">Ayuda</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="informacion_principal">El grupo de Investigación, Desarrollo Tecnológico e innovación CTPI SENA Cauca(Innovatec), como parte de sus líneas de investigación desarrollar proyectos de investigación aplicada e innovación en energías renovables, eficiencia energétìca y gestión de la energía; con lo cual busca aportar en el desarrollo regional y nacional mediante los resultados obtenidos en cada uno de los proyectos desarrollados, adicionalmente se busca dar soluciones a problemáticas reales de zonas rurales, urbanas, empresariales, industriales y en general problemáticas que involucren el uso e integración de las energías renovables de la mano de la eficiencia energética.\n \nAqui podrá tener acceso a gráficas de tiempo real de irradiancia solar, humedad relativa, temperatura ambiente, corriente, voltaje y potencia fotovoltaica; así como acceso  al módulo de consultas  por dia, semana o mes de interés para el análisis de producción fotovoltaica, para el acceso a base de datos deberá registrarse en la página web del grupo de investigación (por definir), adicionalmente se cuenta con aplicaciones para proyectos específicos con energía renovables y eficiencia energética </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="mensaje_contactanos">Grupo de investigación INNOVATEC-CTPI\nCentro de teleinformática y producción Industrial del SENA regional Cauca\nLínea de investigación en energías renovables y eficiencia energética\n\nInvestigador Líder: Rodrigo Montaño F.\n\nContacto 1: romontano@misena.edu.co\n\nContacto 2: solarctpi@gmail.com
        \n\nSemillero de investigación en energías renovables y eficiencia energética SEINEREE\n\nUbicación: Popayán-Cauca, Casa Solar</string>
    <string name="link_googlemaps">https://goo.gl/maps/oj9YJjY5JZN2</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ingrese_usuario">Ingrese su correo electrónico</string>
    <string name="ingrese_contrasena">Ingrese su contraseña</string>
    <string name="se_ha_olvidado_de_contrasena">Se ha olvidado de su contraseña</string>

    <string name="enero">Enero</string>
    <string name="febrero">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="junio">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="septiembre">Septiembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Noviembre</string>
    <string name="diciembre">Diciembre</string>
    <string name="acerca_de">Acerca de</string>
    <string name="paginas">Páginas</string>
    <string name="conocenos">Conócenos</string>
    <string name="no_hay_datos">No hay datos del día seleccionado</string>
    <string name="domingo">Domingo</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="tipo_uso">Tipo de uso</string>
    <string name="academico">Académido</string>
    <string name="empresarial">Empresarial</string>
    <string name="comercial">Comercial</string>
    <string name="otro">Otro</string>

    <string name="tarjeta1_tiempo">Tarjeta 1 vs Tiempo</string>
    <string name="tarjeta2_tiempo">Tarjeta 2 vs Tiempo</string>
    <string name="tarjeta3_tiempo">Tarjeta 3 vs Tiempo</string>
    <string name="tarjetas_tiempo">Tarjetas vs Tiempo</string>
    <string name="potencias_tiempo">Potencias vs Tiempo</string>

    <string name="mensaje">Contacto: romontano@misena.edu.co</string>
    <string name="hora">Hora</string>
    <string name="dia">Día</string>
    <string name="consultas">Consultas</string>
    <string name="title_activity_consultas_fragment">ConsultasFragment</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="seleccione_dia">Selecione Día</string>
    <string name="seleccione_dia_semana">Seleccione día de la semana</string>
    <string name="graficar">Graficar</string>
    <string name="semana">Semana</string>
    <string name="mes">Mes</string>

    <string name="registro_usuario">Registro de Usuario</string>
    <string name="ingrese_correo_r">Correo electrónico(*)</string>
    <string name="ingrese_contrasena_r">Contraseña(*)</string>
    <string name="ingrese_de_nuevo_contrasena">Confirmar contraseña(*)</string>
    <string name="institucion">Institución</string>
    <string name="pais">País(*)</string>
    <string name="departamento">Departamento(*)</string>
    <string name="ciudad">Ciudad(*)</string>
    <string name="contrasenas_no_coinciden">Las contraseñas no coinciden</string>
    <string name="contrasena_muy_corta">La contraseña es muy corta.</string>
    <string name="contrasena_muy_corta_m2">La contraseña es muy corta, por favor ingrese una contraseña  igual o mayor a 8 caracteres.</string>
    <string name="revise_datos">Por favor revise sus datos, algunos son requeridos.</string>
    <string name="mensaje_de_inicio">Por favor ingresa con tu nueva cuenta.</string>

    <string name="primer_nombre">Primer nombre(*)</string>
    <string name="segundo_nombre">Segundo nombre (Opcional)</string>
    <string name="primer_apellido">Primer apellido (*)</string>
    <string name="segundo_apellido">Segundo apellido (Opcional)</string>
    <string name="celular_o_telefono">Celular o Télefono (Opcional)</string>
    <string name="email">Correo electrónico (*)</string>

    <string name="mensajeDeReenvio">Por favor vuelva a ingresar el correo electrónico y la contraseña para confirmar sus cambios.</string>
    <string name="mensajes_campos_vacios">Por favor no deje los campos vacios.</string>
    <string name="correo_contraseña_no_coincide">El correo y contraseña no coinciden.</string>
    <string name="se_han_actualizado_datos">Se han actualizado sus datos.</string>
    <string name="texto_restablecer_contrasena">Por favor recuerda que tu correo es la única credencial para este tipo de cambios.</string>
    <string name="cambiar_contrasena">Cambiar contraseña</string>
    <string name="reestablecer_contrasena">Reestablecer contraseña</string>
    <string name="ingrese_su_contrasena_actual">Ingrese su contraseña actual</string>
    <string name="ingrese_su_nueva_contrasena">Ingrese su nueva contraseña</string>
    <string name="confirme_su_contrasena_nueva">Confirme su contraseña nueva</string>
    <string name="info_reestablecer_contrasena">A su correo le llegará un link el cual le permitirá reestablecer su contraseña al seleccionar ACEPTAR.</string>
    <string name="hay_un_error_actualizar_contra">Hay un error en la actualización, por favor intentarlo de nuevo.</string>
    <string name="las_contrasena_actual_no_coincide">La contraseña actual no es la correcta.</string>
    <string name="a_ocurrido_un_error">A ocurrido un error, por favor intentalo de nuevo.</string>
    <string name="se_le_ha_enviado_un_correo">Se le ha enviado un correo para restablecer su contraseña, por favor espere a que este llegue.</string>
    <string name="a_ocurrido_un_error_afuera">A ocurrido un error, revise si el correo escrito si ha estado registrado.</string>
    <string name="la_contrasena_no_coincide">La contraseña no coincide</string>
    <string name="campos_vacios">Algunos o todos los campos estan vacios</string>
    <string name="cambio_de_contrasena_exito">se ha cambiado su contraseña con éxito</string>
    <string name="welcome">Bienvenido</string>
    <string name="el_usuario_no_registrado">El usuario no está registrado</string>
    <string name="este_valor_requerido">Este campo es requerido.</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="registrar">Registrar</string>
    <string name="actualizar">Actualizar</string>
    <string name="actualizar_contrasena">Actualizar o reinciar contraseña.</string>
    <string name="info_perfil">Campos con asteriscos (*) son obligatorios. Numero de documento sin puntos(.), comas (,) y sin espacios.</string>
    <string name="corrientes">Corrientes</string>
    <string name="potencias">Potencias</string>
    <string name="todo">Todo</string>

    <string name="corriente1">Corriente 1 (A)</string>
    <string name="corriente2">Corriente 2 (A)</string>
    <string name="corriente3">Corriente 3 (A)</string>

    <string name="potencia1">Pontencia 1 (W)</string>
    <string name="potencia2">Pontencia 2 (W)</string>
    <string name="potencia3">Pontencia 3 (W)</string>

    <string name="c1">I1 (A)</string>
    <string name="c2">I2 (A)</string>
    <string name="c3">I3 (A)</string>

    <string name="p1">P1 (W)</string>
    <string name="p2">P2 (W)</string>
    <string name="p3">P3 (W)</string>

    <string name="fecha_datos_tomados">Fecha de los datos tomados</string>
    <string name="fecha">Fecha</string>

    <string name="mensaje_week">Por favor seleccione un día (esta selección tomará toda la semana de dicho día)</string>
    <string name="a">a</string>
    <string name="no_hay_datos_dia_se">No hay datos disponibles para el dia seleccionado.</string>
    <string name="no_hay_datos_disponibles">No hay datos disponibles en este momento</string>
    <string name="potencia_vs_tiempo">Potencia (W) vs Tiempo</string>
    <string name="corriente_vs_tiempo">Corriente (A) vs Tiempo</string>
    <string name="potencia_corriente_vs_tiempo">Potencia(W), Corriente(A) vs Tiempo</string>
    <string name="cerrar">Cerrar</string>
    <string name="leer_mas">Leer más</string>
    <string name="circuito_1">Circuito 1</string>
    <string name="circuito_2">Circuito 2</string>
    <string name="circuito_3">Circuito 3</string>
    <string name="energia_dia">Energía Día (W/día)</string>
    <string name="potencia_maxima">Potencia Máxima (W)</string>
    <string name="hora_potencia_maxima">Hora de Potencia Máxima</string>
    <string name="potencia_minima">Potencia Mínima (W)</string>
    <string name="hora_potencia_minima">Hora de Potencia Mínima</string>
    <string name="restaurar_contrasena">Restaurar Contraseña</string>


</resources>
