<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TiempoRealFragment">

    <TextView
        android:id="@+id/txtTituloChartRT"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/tarjeta1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/tiempoRealChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPotencias" />

    <Button
        android:id="@+id/btnCorriente"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorCorriente1"
        android:text="@string/corrientes"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloChartRT" />

    <Button
        android:id="@+id/btnPotencias"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/colorPotencia1"
        android:text="@string/potencias"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnTodo"
        app:layout_constraintStart_toEndOf="@+id/btnCorriente"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloChartRT" />

    <Button
        android:id="@+id/btnTodo"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/todo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloChartRT" />

</androidx.constraintlayout.widget.ConstraintLayout>