<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.DiaFragment">


    <Button
        android:id="@+id/btnCorriente2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorCorriente1"
        android:text="@string/corrientes"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnTodo2"
        app:layout_constraintStart_toEndOf="@+id/btnPotencias2"
        app:layout_constraintTop_toBottomOf="@+id/btnConsulta1" />

    <Button
        android:id="@+id/btnPotencias2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:backgroundTint="@color/colorPotencia1"
        android:text="@string/potencias"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsulta1" />

    <Button
        android:id="@+id/btnTodo2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/todo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsulta1" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChartDia"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCorriente2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtConsulta1"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_vertical"
        android:textColor="@color/colorMenu"
        app:layout_constraintEnd_toStartOf="@+id/btnConsulta1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnConsulta1"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center_vertical"
        android:text="@string/seleccione_dia"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/pbConsulta1"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>